03_code2/grade.txt
Grading at Sat Jan 12 09:54:21 UTC 2019
Checking code2.c for legal syntax
temp.c: In function ‘printTriangle’:
temp.c:8:7: error: unused variable ‘j’ [-Werror=unused-variable]
   int j;
       ^
temp.c:7:7: error: unused variable ‘i’ [-Werror=unused-variable]
   int i;
       ^
cc1: all warnings being treated as errors
The code did not have legal syntax!

Overall Grade: F
